--- a/assets/templates/add_contact.html
+++ b/assets/templates/add_contact.html
@@ -14,8 +14,9 @@
                 <h4>Tasks are better with a team!</h4>
             </div>
         </div>
-
-        <img src="../assets/icons/empty-user-avatar.png">
+        <div id="contactCredentials">
+            <img src="../assets/icons/empty-user-avatar.png">
+        </div>
         <form class="add-contact-card-form" onsubmit="return false;">
             <div><input type="text" id="add-contact-name" placeholder="Name"><img src="../assets/icons/person-icon.svg">
             </div>
