--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,15 +1,20 @@
 
-
 #addTaskContainer {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     position: absolute;
-    width: 1208px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 96px 0 0 328px;
+    overflow-y: scroll;
+    /* width: 1208px;
     height: 928px;
     left: 232px;
-    top: 96px
+    top: 96px; */
 }
 
 .add-task {
