--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,15 +1,23 @@
 <header>
-    <div class="header-left">
-        <span>Kanban Project Management Tool</span>
-    </div>
-
-    <div class="header-right">
-        <a onclick="openHelp()">
-            <img class="help" src="assets/image/sidebar/help.svg" alt="Help Icon">
-        </a>
-        <div id="myAccount" onclick="ShowMenu()">
+    <div class="header">
+        <div class="header-left">
+            <span>Kanban Project Management Tool</span>
         </div>
+
+        <div class="header-right">
+            <a onclick="openHelp()">
+                <img
+                    class="help"
+                    src="assets/image/sidebar/help.svg"
+                    alt="Help Icon"
+                />
+            </a>
+            <div id="myAccount" onclick="ShowMenu()"></div>
+        </div>
+    </div>
 </header>
+
+
 
 <div id="header-menu" class="header-menu dNone">
     <div class="header-subMenu">
@@ -18,3 +26,5 @@
         <a href="index.html">Log out</a>
     </div>
 </div>
+
+
