--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,9 @@
-header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 348px;
+    /* padding-left: 348px; */
+    padding: 0 30px 0 348px;
     position: fixed;
     top: 0;
     left: 0;
@@ -23,7 +24,6 @@ header {
     display: flex;
     align-items: center;
     gap: 16px;
-    margin-right: 30px;
 }
 
 .header-menu {
@@ -36,7 +36,9 @@ header {
     border-radius: 20px 0 20px 20px;
     padding: 10px;
     background-color: #2A3647;
-    z-index: 1;
+    z-index: 3;
+
+    /* transition: right 0.3s ease-out; */
 }
 
 .header-subMenu {
@@ -88,3 +90,10 @@ header {
 #myAccount:hover {
     background-color: #E2E6EC;
 }
+
+
+
+
+
+
+
