--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="header">
-        <div class="header-left">
+        <div class="header-left" id="header-icon">
             <span>Kanban Project Management Tool</span>
         </div>
 
