legal notice responsiv

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header">
-        <div class="header-left" id="header-icon">
+        <div class="header-left">
             <span>Kanban Project Management Tool</span>
         </div>
 
-        <div class="header-right">
+        <div class="header-right" id="header-icon">
             <a onclick="openHelp()">
                 <img
                     class="help"
