--- a/css/contact.css
+++ b/css/contact.css
@@ -40,7 +40,20 @@ h4 {
     bottom: 0;
     z-index: 999;
     overflow: hidden;
+    animation: rightToCenter 0.5s ease-in-out forwards;
 }
+
+@keyframes rightToCenter {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+
 
 .add-contact-card {
     display: flex;
@@ -78,24 +91,35 @@ h4 {
 
 }
 
+.add-contact-blue-line {
+    background-color: #29ABE2;
+    height: 3px;
+    width: 90px;
+}
+
 .add-contact-card-icon {
     object-fit: cover;
     width: 55.6px;
     height: 66.48px
 }
 
-#contactCredentials .circle{
-width: 120px;
-height: 120px;
-border-radius: 70px;
-border: 3px;
-margin-right: 54px;
-margin-bottom: 10px;
+.contact-name-row .circle {
+    width: 120px;
+    height: 120px;
+    border-radius: 70px;
+    border: 3px;
+}
+
+#contactCredentials .circle {
+    width: 120px;
+    height: 120px;
+    border-radius: 70px;
+    border: 3px;
 }
 
 #contactCredentials .circle .circle-text {
-font-weight: 500;
-font-size: 47px;
+    font-weight: 500;
+    font-size: 47px;
 }
 
 
@@ -114,11 +138,12 @@ font-size: 47px;
 }
 
 .add-contact-card-form input {
-    width: 422px;
+    width: 380px;
     height: 50px;
     border-radius: 10px;
     border: solid 1px #D1D1D1;
-    padding-left: 5%;
+    padding-left: 21px;
+    padding-right: 21px;
     font-size: 20px;
 }
 
@@ -126,6 +151,7 @@ font-size: 47px;
     position: relative;
     float: right;
     margin-top: -40px;
+    margin-right: 21px;
 }
 
 #addContactFormActions {
@@ -137,7 +163,143 @@ font-size: 47px;
     position: absolute;
     right: 40px;
     top: 40px;
+    cursor: pointer;
 }
+
+#contactChangeNotificationContainer {
+    position: absolute;
+    z-index: 999;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: #2A3647;
+    left: 54px;
+}
+
+.contact-change-notification {
+    z-index: 999;
+    color: white;
+    width: 326px;
+    height: 74px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.shift-in {
+    animation: rightToLeft 1s ease-in-out forwards;
+}
+
+.shift-out {
+    animation: leftToRight 1s ease-in-out forwards;
+}
+
+@keyframes rightToLeft {
+    from {
+        transform: translateX(300%);
+    }
+
+    to {
+        left: 54px;
+    }
+}
+
+@keyframes leftToRight {
+    from {
+        left: 54px;
+    }
+
+    to {
+        transform: translateY(300%);
+    }
+}
+
+
+
+
+
+
+@media (max-device-width: 1000px) {
+    .add-contact-card {
+        flex-direction: column;
+        justify-content: flex-start;
+        position: relative;
+        overflow-y: scroll;
+        max-height: 90%;
+        height:fit-content;
+        gap: 0px;
+    }
+
+    #contactCredentials .circle {
+        margin-top: -60px;
+    }
+
+    #contactCredentials img {
+        border: none;
+        margin-top: -60px;
+    }
+
+    .add-contact-card-form input {
+        width: 100%;
+        margin-right: -21px;
+    }
+
+    .add-contact-card-form img {
+        margin-right: -21px;
+    }
+
+    #addContactFormActions {
+        width: calc(100% + 48px);
+        justify-content: center;
+    }
+
+    .clear-button {
+        display: none;
+    }
+
+    .shift-in {
+        animation: fromBottomTo20Percent 1s ease-in-out forwards;
+    }
+
+    .shift-out {
+        animation: from20PercentToBottom 1s ease-in-out forwards;
+    }
+}
+
+
+@keyframes fromBottomTo20Percent {
+    from {
+        bottom: 0;
+    }
+
+    to {
+        bottom: 20%;
+    }
+}
+
+@keyframes from20PercentToBottom {
+    from {
+        bottom: 20%;
+    }
+
+    to {
+        bottom: 0;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .contacts-container {
     position: absolute;
@@ -149,28 +311,29 @@ font-size: 47px;
     overflow-y: scroll;
 }
 
-.contact-list {
+.contact-list-container {
     border-right: 1px solid #D1D1D1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 438px;
     position: relative;
+    max-width: 100%;
+    width:800px;
 }
 
-.user-list {
-    position: absolute;
+#contactList {
+    position: relative;
     display: flex;
-    max-height: fit-content;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     padding-bottom: 46px;
     top: 0px;
-    height: calc(100vh - 46px - 96px - 78px);
+    left:0px;
+    width:100%;
+    height: 100%;
     margin-top: 78px;
-    overflow-y: scroll;
 }
 
 .scrollable {
@@ -180,9 +343,9 @@ font-size: 47px;
 .contact-list-letter-header {
     display: flex;
     align-items: center;
+    width: 100%;
     height: 58px;
     margin: 8px;
-    width: 352px;
 }
 
 .contact-list-letter-header p {
@@ -192,34 +355,40 @@ font-size: 47px;
 }
 
 .contact-list-horizontal-line {
-    height: 1px;
     width: 352px;
     background-color: #D1D1D1;
     margin: 8px;
+    padding:0.5px;
 }
 
-.user-element {
+.contact-element {
     display: flex;
     align-items: center;
     gap: 35px;
     height: 78px;
-    width: 312px;
+    width: calc(100% - 112px);
     cursor: pointer;
     border-radius: 10px;
     padding: 15px 24px 15px 24px;
+    font-size: 20px;
 }
 
-.user-element:hover {
+.contact-element:hover {
     background-color: rgb(233, 233, 233);
 }
 
-.user-element.selected {
+.contact-element.selected {
     background-color: #091931;
     color: white;
 }
 
 .contact-list-mail-text {
     color: #007CEE;
+    word-wrap: break-word;
+}
+
+.contact-button-mobile{
+    display: none !important;
 }
 
 .user-values {
@@ -234,17 +403,25 @@ font-size: 47px;
     width: 352px;
 }
 
+.selected-contact-container {
+    position: relative;
+    width: calc(100% - 438px);
+    margin-left: 54px;
+    margin-right: 54px;
+}
+
 .selected-contact-container h1 {
     font-size: 61px;
     font-weight: 700;
-    margin: 30px;
+    margin: 0px;
 }
 
 .selected-contact-header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 30px;
+    margin-top: 30px;
 }
 
 .selected-contact-container h2 {
@@ -261,8 +438,11 @@ font-size: 47px;
     width: 3px;
 }
 
-.selected-contact-body {
-    margin: 54px;
+.vertical-blue-line {
+    display: none;
+    background-color: #29ABE2;
+    height: 3px;
+    width: 59px;
 }
 
 .contact-name-row {
@@ -272,12 +452,8 @@ font-size: 47px;
 }
 
 .contact-name-row .circle {
-    width: 120px;
-    height: 120px;
-    border-radius: 70px;
-    border: 3px;
-    margin-right: 54px;
-    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 47px;
 }
 
 .contact-name-row .circle .circle-text {
@@ -309,10 +485,104 @@ font-size: 47px;
     font-weight: 700;
 }
 
+
+
 .contact-information {
     font-size: 20px;
 }
 
 .contact-details {
     gap: 22px;
+}
+
+#goBack {
+    visibility: hidden !important;
+}
+
+
+@media (max-device-width: 1200px) {
+    .selected-contact-header {
+        flex-direction: column;
+        align-items: start;
+        gap: 0px;
+        margin-bottom: 40px;
+    }
+
+    .selected-contact-header h1 {
+        margin-left: 0;
+        margin-bottom: 0;
+    }
+
+    .selected-contact-header h4 {
+        margin: 12px 0px 12px 0px;
+    }
+
+    .horizontal-blue-line {
+        display: none
+    }
+
+    .vertical-blue-line {
+        display: block;
+    }
+
+    .contact-name-row {
+        width: 100%;
+    }
+
+    .contacts-container {
+        left: 232px;
+        justify-content: center;
+    }
+
+    .contact-hide-on-mobile {
+        display: none !important;
+    }
+
+    .selected-contact-container {
+        width: 90%;
+    }
+
+    #goBack {
+        visibility: visible !important;
+        top: 20px;
+        right: 0;
+    }
+
+    .contact-list-container{
+        position: relative;
+        width:100%;
+        max-width: 800px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .contact-button{
+        visibility: hidden;
+    }
+
+    .contact-button-mobile{
+        display: flex !important;
+        border-radius: 50%;
+        padding: 15px;
+        position: fixed;
+        right:22px;
+        bottom:22px;
+        
+    }
+
+    #contactList{
+        margin-top: 0;
+        margin-bottom: 81px;
+    }
+}
+
+@media (max-device-width: 800px) {
+    .contacts-container {
+        left: 0px;
+        width: 100%;
+    }
+
+    .contact-button-mobile{
+        bottom:85px;
+    }
 }
