--- a/css/board.css
+++ b/css/board.css
@@ -72,6 +72,7 @@
     color: #FFFFFF;
     padding: 6px 16px;
     border-radius: 10px;
+    border: none;
 }
 
 .task-board {
@@ -93,26 +94,41 @@
     font-family: 'Inter', sans-serif;
 }
 
+.task-field {
+    /* position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0; */
+    /* height: calc(100vh - 337px); */
+    height: 100vh;
+    margin: 8px 64px 0 0px;
+    overflow: hidden;
+}
+
 .task-area {
     display: flex;
     justify-content: space-between;
-    margin: 8px 64px 0 0px;
+    /* margin: 8px 64px 0 0px; */
     height: calc(100vh - 327px);
     gap: 24px;
+    height: 100%;
+    padding-bottom: 16px;
+    overflow: scroll;
 }
 
 .creat-task-area {
     width: 244px;
-    background-color: rgba(0, 0, 0, 0.2);
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     flex: 1 0 0;
+    gap: 16px;
+    border-radius: 24px;
 }
 
 .task-card {
     padding: 16px;
     background-color: #FFFFFF;
-    /* width: 100%; */
     border-radius: 24px;
     display: flex;
     flex-direction: column;
@@ -126,10 +142,8 @@
     font-size: 16px;
     font-weight: 400;
     font-family: 'Inter', sans-serif;
-    /* display: inline-block; */
     color: #FFFFFF;
     border-radius: 8px;
-    /* margin-bottom: 24px; */
 }
 
 h4 {
@@ -223,5 +237,23 @@ h4 {
     font-size: 12px;
     font-weight: 400;
     font-family: 'Inter', sans-serif;
+}
+
+.drag-area-highlight {
+    border: 2px gray dashed;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.noToDo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 48px;
+    color: #A8A8A8;
+    border: 1px #A8A8A8 dashed;
+    border-radius: 10px;
+    background-color: #E7E7E7;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+    font-size: 16px;
 }
 
