--- a/css/board.css
+++ b/css/board.css
@@ -52,6 +52,7 @@
 .input-search {
     position: absolute;
     right: 15px;
+    cursor: pointer;
 }
 
 .head-section-right {
@@ -73,6 +74,11 @@
     padding: 6px 16px;
     border-radius: 10px;
     border: none;
+}
+
+.add-task:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 9px -1px rgba(0, 0, 0, 0.4);
 }
 
 .task-board {
