update header menu

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -3,6 +3,7 @@
         <div class="header-left">
             <span>Kanban Project Management Tool</span>
         </div>
+        <div onclick="closeMenu()" id="overlay" class="dNone"></div>
 
         <div class="header-right" id="header-icon">
             <a onclick="openHelp()">
@@ -16,7 +17,6 @@
         </div>
     </div>
 </header>
-
 
 
 <div id="header-menu" class="header-menu dNone">
