--- a/css/header.css
+++ b/css/header.css
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     gap: 16px;
+    z-index: 2;
 }
 
 .header-menu {
@@ -35,6 +36,8 @@
     padding: 10px;
     background-color: #2A3647;
     z-index: 3;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
 .header-subMenu {
@@ -83,6 +86,17 @@
 
 #myAccount:hover {
     background-color: #E2E6EC;
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 
