--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -6,7 +6,7 @@
     <div class="sidebar" w3-include-html="./assets/templates/sidebar.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
 
-    <form onsubmit="return false;" id="addTaskContainer">
+    <form id="addTaskContainer">
         <div class="add-task" onchange="saveCurrentEntriesToTask()">
             <h1>Add Task</h1>
             <div class="task-input-container">
@@ -53,7 +53,7 @@
 
                     <div class="task-date">
                         <label for="newTaskDate">Due Date</label>
-                        <input type="date" id="newTaskDate">
+                        <input type="date" id="newTaskDate" min="2020-01-01" required>
                     </div>
 
                     <div class="task-priority">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-options">
+            <div id="formOptions">
                 <button type='button' onclick="emptyAddTaskForm()" class="alternative-button">Clear</button>
                 <button type='button' id="createTask" onclick="submitTask()" class="default-button">
                     Create Task</button>
